# -PII-Tool

./: .coverage  .gitignore  README.md  Redacted_Prospectus.docx  app.py  entity_vault.json  pyproject.toml  requirements.txt  web_entity_vault.json  ~$dacted_Prospectus.docx
config/: settings.yaml
src/: __init__.py
src/anonymizers/: __init__.py  anonymizer_factory.py  entity_store.py  fake_operators.py
src/cli/: __init__.py  main.py
src/document_processors/: __init__.py  base_processor.py  docx_processor.py  text_walker.py
src/pipeline/: __init__.py  redactor_pipeline.py
src/recognizers/: __init__.py  analyzer_factory.py  company_recognizer.py  dob_recognizer.py  ssn_recognizer.py
src/utils/: __init__.py  file_utils.py  logger.py  stop_words.py
tests/: conftest.py  test_docx_processor.py  test_entity_store.py  test_pipeline.py  test_recognizers.py
