[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaler-pii-redactor"
version = "1.0.0"
description = "Industrial-quality PII Redaction Tool replacing sensitive PII in DOCX documents with realistic synthetic alternatives."
authors = [
    { name = "Senior Privacy Engineer", email = "privacy@scaler-labs.ai" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.1.2",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.8.2",
    "Faker>=33.3.0",
    "click>=8.1.7",
    "PyYAML>=6.0.2",
    "pydantic>=2.10.4",
    "colorlog>=6.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
scaler-redact = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "C90"]
ignore = []
